--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.0",
     "jquery": "^3.5.1",
+    "ngx-pagination": "^5.1.1",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
